--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
     <link rel="shortcut icon" href="/images/logo-m.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
     <script type="text/javascript">
         WebFont.load({
@@ -72,7 +73,7 @@
                                 <div class="button-4">
                                     <div id="w-node-_48aa42b0-a9b0-de62-43d7-01efdb83c54d-db83c533" class="w-layout-layout quick-stack-11 wf-layout-layout">
                                         <div class="w-layout-cell">
-                                            <a href="https://t.me/" class="link-block-4 w-inline-block">
+                                            <a href="https://t.me/PixeIMario" class="link-block-4 w-inline-block">
                                                 <div class="text-block-4" style="font-family: head;" >COMMUNITY</div>
                                             </a>
                                         </div>
@@ -86,7 +87,7 @@
                 <div class="button-2 mobile header">
                     <div id="w-node-_48aa42b0-a9b0-de62-43d7-01efdb83c558-db83c533" class="w-layout-layout quick-stack-3 wf-layout-layout">
                         <div class="w-layout-cell">
-                            <a href="https://t.me/" class="link-block-3 w-inline-block">
+                            <a href="https://t.me/PixeIMario" class="link-block-3 w-inline-block">
                                 <div class="text-block-3" style="font-family: head;">TELEGRAM</div>
                             </a>
                         </div>
@@ -170,10 +171,8 @@
                     <div class="div-block-6">
                         <h1 class="heading" style="font-family: head; font-size: 40px;" id="aboutt">ABOUT</h1>
                         <p class="paragraph" style="font-family: texts;">
-                            is here to save the day, blending the charm of classic Mario with the 
-                            humor of today's meme culture. In this pixel-perfect world, our beloved 
-                            plumber embarks on a quest to restore order to the Mushroom Kingdom, now overrun by viral
-                             memes and internet chaos.
+                            is here to save the day, blending the charm of classic Mario with the humor of today's meme culture. In this pixel-perfect world,
+                             our beloved plumber embarks on a quest to restore order to the Mushroom Kingdom, now overrun by viral memes and internet chaos.
 
 
 
@@ -194,7 +193,7 @@
                                 <div class="button-2 mobile communitybtn">
                                     <div id="w-node-_291a1d9e-e392-dec6-56cd-b544fce4c0a6-68be4839" class="w-layout-layout quick-stack-3 wf-layout-layout">
                                         <div class="w-layout-cell">
-                                            <a href="https://t.me/" class="link-block-3 communitybtn w-inline-block">
+                                            <a href="https://t.me/PixeIMario" class="link-block-3 communitybtn w-inline-block">
                                                 <div class="text-block-3 communitybtn"  style="font-family:head;">COMMUNITY</div>
                                             </a>
                                         </div>
@@ -213,23 +212,12 @@
         <div class="div-block-10">
             <div id="w-node-_8c4026e2-1c1a-6636-655e-afbee3d0cbf3-68be4839" class="w-layout-layout our-games-title-description wf-layout-layout">
                 <div id="w-node-_8c4026e2-1c1a-6636-655e-afbee3d0cbf4-68be4839" class="w-layout-cell">
-                    <h1 class="heading-2" style="font-family: head;">What is Pixel Mario</h1>
+                    <h1 class="heading-2" style="font-family: head;">Who is Pixel Mario</h1>
                 </div>
                 <div id="w-node-_8c4026e2-1c1a-6636-655e-afbee3d0cbf7-68be4839" class="w-layout-cell">
-                    <p class="paragraph-3" style="font-family: texts; letter-spacing: 3px; line-height: 20px;">Pixel Mario is a retro-inspired, side-scrolling platformer that brings Mario into a pixelated 
-                        universe teeming with internet humor. Designed to delight both longtime fans and new players, Pixel Mario
-                         combines classic gameplay elements with modern
-                         meme magic, delivering an experience that's as challenging as it is hilarious.</p> <br>
-
-
-                         <p class="paragraph-3" style="font-family: texts; letter-spacing: 3px; line-height: 20px;">
-
-                            Get ready to embark on an epic journey filled with laughter, nostalgia, and memes. 
-                            Pixel Mario is not just an experience; it's a celebration of internet culture and classic gaming. 
-                            Whether you're exploring Meme Meadows, facing the heat in Viral Volcano, 
-                            or navigating the eerie Meme Mansion, every moment promises fun and excitement.
-
-                         </p>
+                    <p class="paragraph-3" style="font-family: texts; letter-spacing: 3px; line-height: 20px;">P
+                        ixel Mario is a retro-inspired, side-scrolling platformer that brings Mario into a pixelated universe teeming with internet humor. Designed to delight both longtime fans and new players, Pixel Mario combines classic gameplay elements with modern meme magic, delivering an experience that's as challenging as it is hilarious.
+                       
                          <div style="justify-content: center; display: flex; align-items: center; margin: auto;">
                          <img src="/images/2.gif" alt="">
                         </div>
@@ -273,7 +261,23 @@
                 </div>
             </div>
         </div>
-        <div class="div-block-18"><img src="images/run.gif" loading="lazy" sizes="(max-width: 682px) 100vw, 682px" srcset="images/run.gif 500w, images/run.gif 682w" alt="" class="image-17"></div>
+        <style>
+            html, body{
+                overflow-x: hidden;
+            }
+        </style>
+        <div class="div-block-18"
+        ><img src="images/run.gif" loading="lazy" sizes="(max-width: 682px) 100vw, 682px" srcset="images/run.gif 500w, images/run.gif 682w" alt="" class="image-17">
+        <div style="display: flex; justify-content: center;">
+        <a href="https://t.me/PixeIMario">
+            <img src="/images/tg.png" style="width: 50px;" alt="">
+        </a>
+
+        <a href="https://x.com/pixeIMario">
+            <img src="/images/twi.png"  style="width: 50px;" alt="">
+        </a>
+    </div>
+    </div>
         <div class="f-footer-small">
             <div class="f-container-large">
                 <div class="f-footer-bottom">
