--- a/index.html
+++ b/index.html
@@ -291,9 +291,20 @@
             </div>
         </div>
     </section>
-    <audio id="audio_jump">
-        <source src="jump.wav" type="audio/wav">
+    <audio id="background-music" autoplay loop>
+        <source src="overworld.mp3" type="audio/mpeg">
+      
     </audio>
+    <script>
+
+        // Optional: Ensure autoplay works after user interaction
+        document.addEventListener('click', function() {
+            var audio = document.getElementById('background-music');
+            if (audio.paused) {
+                audio.play();
+            }
+        });
+    </script>
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=66350061e5ad455c68be482b" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="js/webflow.js" type="text/javascript"></script>
 </body>
