--- a/gameS.html
+++ b/gameS.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html xml:lang="en" lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Mario game written in HTML.</title>
+    <title>Pixel Mario</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="cache-control" content="max-age=0" />
     <meta http-equiv="cache-control" content="no-cache" />
@@ -11,10 +11,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="application/javascript" src="jquery-3.5.1.min.js"></script>
     <style type="text/css">
-        html, html > body {
+        html, body {
             margin: 0;
-            padding: 1em;
-            font-family:Arial;
+            padding: 0;
+            background-color: #000;
+            background-image: url(/images/bg-dots4x-1.svg);
+            font-family: Arial, sans-serif;
+            overflow-x: hidden;
         }
 
         *:not(a) {
@@ -40,14 +43,17 @@
         }
 
         .mario_big {
-            width: 25px;
+            width: 35px;
         }
 
         #stage {
             position: relative;
-            height: 300px;
-            width: 400px;
-            margin: 0;
+            height: 50vh;
+            justify-content: center;
+            display: flex;
+            align-items: center;
+            margin: auto;
+            width: 100%;
             background-color: #40bfff;
             background-size: contain;
             background-repeat: repeat-x;
@@ -55,58 +61,54 @@
             animation: bg_ani_1 20s infinite linear, bg_ani_2 2s infinite alternate;
             border: 1px solid #000;
             border-radius: 1em;
-            margin-left: 1em;
             margin-top: 0.3em;
             box-shadow: inset 0px -5px 14px 0px rgba(0, 0, 0, 0.55);
             filter: saturate(0.6);
         }
+
         .tv {
             background-repeat: no-repeat;
-            height: 410px;
-            width: 600px;
+            height: 100%;
+            width: 100%;
             z-index: 99999999999;
             position: absolute;
-            content: '';
-            background-image: url(tv.png);
-            border-radius: 1em;
             background-size: contain;
             top: 0;
-            left: 8px;
+            left: 0;
         }
+
         .scanlines {
-            height: 310px;
-            width: 440px;
+            height: 100%;
+            width: 100%;
             z-index: 999999999;
             position: absolute;
             opacity: 0.4;
-            background-image: url(scanlines.png);
             background-size: contain;
         }
+
         .info {
-            padding: 2em !IMPORTANT;
-            display:none;
+            padding: 2em !important;
+            display: none;
         }
 
         #stats_pane {
             position: absolute;
-            left: 3.5em;
-            top: 2.5em;
+            left: 1em;
+            top: 1em;
             padding: 5px;
             font-size: 16pt;
             color: white;
             font-weight: bold;
-            font-family: Arial;
             background-color: transparent;
             z-index: 200;
             text-shadow: 1px 1px 1px #000;
         }
 
-            #stats_pane img {
-                height: 0.7em;
-            }
+        #stats_pane img {
+            height: 0.7em;
+        }
 
         .description {
-            font-family: Arial;
             font-size: 9pt;
         }
 
@@ -120,14 +122,14 @@
         #debug {
             border: 1px dashed blue;
             position: relative;
-            width: 300px;
+            width: 100%;
             height: 6em;
             overflow: hidden;
         }
 
         .share {
-            position:absolute;
-            top:410px;  
+            position: absolute;
+            top: 410px;
         }
 
         .sprite {
@@ -143,7 +145,6 @@
                 background-position-x: 0;
                 background-position-y: 0;
             }
-
             to {
                 background-position-x: -400px;
                 background-position-y: 5px;
@@ -154,11 +155,53 @@
             from {
                 background-position-y: 0;
             }
-
             to {
                 background-position-y: 5px;
             }
         }
+
+        @media (max-width: 768px) {
+            #stage {
+                height: 60vh;
+            }
+
+            #stats_pane {
+                font-size: 12pt;
+                left: 1em;
+                top: 0.5em;
+            }
+        }
+
+        @media (max-width: 480px) {
+            #stage {
+                height: 70vh;
+            }
+
+            #stats_pane {
+                font-size: 10pt;
+                left: 0.5em;
+                top: 0.5em;
+            }
+        }
+
+        .control-button {
+            position: fixed;
+            background-color: rgba(255, 255, 255, 0.5);
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            z-index: 1000;
+            text-align: center;
+            line-height: 50px;
+            font-size: 24px;
+            font-weight: bold;
+            user-select: none;
+        }
+
+        #up { bottom: 100px; left: 50%; transform: translateX(-50%); }
+        #down { bottom: 20px; left: 50%; transform: translateX(-50%); }
+        #left { bottom: 60px; left: calc(50% - 60px); }
+        #right { bottom: 60px; left: calc(50% + 60px); }
     </style>
     <script type="text/javascript" src="gameengine.js"></script>
 </head>
@@ -200,9 +243,7 @@
         </div>
         <textarea id="debug" rows="3" cols="50"></textarea>
     </div>
-    <div class="share">
-        <span>Download Source Code: </span><a href="HTML_Mario_Source_Code.zip">HTML_Mario_Source_Code.zip</a>
-    </div>
+   
     <audio id="audio_jump">
         <source src="jump.wav" type="audio/wav">
     </audio>
@@ -236,5 +277,50 @@
     <audio id="audio_overworld">
         <source src="overworld.mp3" type="audio/mp3">
     </audio>
+
+    <!-- Mobile Controls -->
+    <div id="up" class="control-button">▲</div>
+    <div id="down" class="control-button">▼</div>
+    <div id="left" class="control-button">◀</div>
+    <div id="right" class="control-button">▶</div>
+
+    <script>
+        // Add event listeners for touch controls
+        document.getElementById('up').addEventListener('touchstart', function() {
+            simulateKeyPress('ArrowUp'); // Up arrow key code
+        });
+        document.getElementById('down').addEventListener('touchstart', function() {
+            simulateKeyPress('ArrowDown'); // Down arrow key code
+        });
+        document.getElementById('left').addEventListener('touchstart', function() {
+            simulateKeyPress('ArrowLeft'); // Left arrow key code
+        });
+        document.getElementById('right').addEventListener('touchstart', function() {
+            simulateKeyPress('ArrowRight'); // Right arrow key code
+        });
+
+        document.getElementById('up').addEventListener('touchend', function() {
+            simulateKeyRelease('ArrowUp'); // Up arrow key code
+        });
+        document.getElementById('down').addEventListener('touchend', function() {
+            simulateKeyRelease('ArrowDown'); // Down arrow key code
+        });
+        document.getElementById('left').addEventListener('touchend', function() {
+            simulateKeyRelease('ArrowLeft'); // Left arrow key code
+        });
+        document.getElementById('right').addEventListener('touchend', function() {
+            simulateKeyRelease('ArrowRight'); // Right arrow key code
+        });
+
+        function simulateKeyPress(key) {
+            var event = new KeyboardEvent('keydown', { key: key });
+            document.dispatchEvent(event);
+        }
+
+        function simulateKeyRelease(key) {
+            var event = new KeyboardEvent('keyup', { key: key });
+            document.dispatchEvent(event);
+        }
+    </script>
 </body>
 </html>
